Add exit status directive

--- a/yamcs-core/misc/systemd/yamcs-server.service
+++ b/yamcs-core/misc/systemd/yamcs-server.service
@@ -8,6 +8,7 @@ ExecStart=/opt/yamcs/bin/yamcs-server.sh
 Environment="YAMCS_DAEMON=1"
 WorkingDirectory=/opt/yamcs
 User=yamcs
+SuccessExitStatus=0 143
 
 [Install]
 WantedBy=multi-user.target
